# webauto

./: README.md  pyproject.toml
src/: example.py  logger.py  utils.py
src/browser/: base.py  constants.py  element.py  managers.py  options.py  page.py  tab.py  utils.py
src/browser/chromium/: base.py  chrome.py  chromium.py  edge.py
src/cdp/: Browser.py  Page.py  Target.py  base.py
src/connection/: connection.py
webauto/browser/: constants.py  element.py  manager.py  options.py  tab.py  utils.py
webauto/browser/chromium/: chrome.py  chromium.py  context.py  edge.py  options.py
webauto/browser/tools/: mouse.py  runtime.py
