[project]
name = "webauto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cdpkits>=1.2.7",
]

[tool.ruff.lint]
preview = true
select = ["E", "F", "W", "I", "UP"]
exclude = ["tests", "tests/*", "demos/*"]

[tool.ruff.format]
preview = true
quote-style = "single"

[dependency-groups]
ruff = [
    "ruff>=0.11.6",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.uv]
build-constraint-dependencies = ["setuptools"]
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
include = ['webauto*']
exclude = ['tests*', 'demo*', 'src*', 'logs*']